--- a/nhl_birth_cities/index.html
+++ b/nhl_birth_cities/index.html
@@ -29,7 +29,8 @@ permalink: nhl-birth-cities
             <div class="sidebar-tabs">
                 <ul role="tablist">
                     <li><a href="#home" role="tab"><i class="fa fa-bars"></i></a></li>
-                    <li><a href="#table" role="tab"><i class="fa fa-table"></i></a></li>
+                    <li><a href="#players" role="tab"><i class="fa fa-user"></i></a></li>
+                    <li><a href="#teams" role="tab"><i class="fa fa-group"></i></a></li>
                     <li><a href="#cities" role="tab"><i class="fa fa-building"></i></a></li>
 
                 </ul>
@@ -50,6 +51,8 @@ permalink: nhl-birth-cities
                     <p>This map displays the birth city of (nearly) every NHL player to have played in at least one game
                         of the 2017-18 season, as of 2017-12-06.</p>
 
+                    <p>The icons to the left allow you sort search & filter the map by player, team, or city, respectively.</p>
+
                     <p>Birth city data was taken from the excellent <a href="http://hockey-reference.com">Hockey Reference</a> site,
                     and the city name was geocoded against the <a href="http://www.geonames.org/">Geonames API</a> to get the city's coordinates.
                     I performed very little cleanup on the data, which resulted in some of the outliers that you see. The Geonames API also
@@ -60,12 +63,16 @@ permalink: nhl-birth-cities
 
                 </div>
 
-                <div class="sidebar-pane" id="table">
-                    <h1 class="sidebar-header">Table View<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
+                <div class="sidebar-pane" id="players">
+                    <h1 class="sidebar-header">Players<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
+                </div>
+
+                <div class="sidebar-pane" id="teams">
+                    <h1 class="sidebar-header">Teams<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
                 </div>
 
                 <div class="sidebar-pane" id="cities">
-                    <h1 class="sidebar-header">City View<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
+                    <h1 class="sidebar-header">Cities<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
                 </div>
 
                 <div class="sidebar-pane" id="info">
