--- a/nhl_birth_cities/index.html
+++ b/nhl_birth_cities/index.html
@@ -1,10 +1,10 @@
 ---
-permalink: nhl-birth-cities
+permalink: nhl-hometowns
 ---
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>NHL Player birth locations</title>
+    <title>NHL Player Hometowns</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
     <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
@@ -47,26 +47,29 @@ permalink: nhl-birth-cities
                     </h1>
 
                     <h3>Introduction</h3>
-                    <p>While hockey is stereotypically a sport played by those from the True North <i class="fa fa-copyright" aria-hidden="true"></i>,
-                        in practice players in the NHL come from all over the northern hemisphere.</p>
+                    <p>While hockey is stereotypically thought of as a sport played by Canadians,
+                        in reality players in the NHL come from all over the northern hemisphere. This visualization
+                        will let you explore the birth cities of NHL players individually, by team, or by city. It
+                        includes every NHL player to have played in at least one game of the 2017-18 season, as of
+                        2018-05-26. </p>
 
-                    <p>This map displays the birth city of every NHL player to have played in at least one game
-                        of the 2017-18 season, as of 2017-12-06.</p>
+                    <p>This map is meant to be used as a companion to my blog post about this data, found *here*. </p>
 
-                    <h3>Instructions</h3>
-                    <p>The icons to the left allow you to search and filter the map by player, team, or city, respectively. More instructions can be found in each individual tab.</p>
+
+                    <h3>How to use this map</h3>
+                    <p>The icons to the left allow you to search and filter the map by player, team, or city, respectively.
+                        More instructions can be found in each individual tab, with credits and more info in the tab at
+                        the very bottom of the sidebar.</p>
 
                     <h3>Methodology</h3>
                     <p>Birth city data was taken from the excellent <a href="http://hockey-reference.com">Hockey Reference</a> site,
                     and the city name was geocoded against the <a href="http://www.geonames.org/">Geonames API</a> to get the city's coordinates.
                         I performed a little cleanup on the data by hand, as there were a few weird outliers that were <strong>very</strong>
-                        obviously wrong. The Geonames API also has a tendency to choose a municipal airport in some cases,
+                        obviously wrong. The Geonames API has a tendency to choose a municipal airport for some cities / towns
                         which led to some other weirdness; for example, Sidney Crosby's birth town of Cole Harbor was geocoded
                         to the local airport. I didn't make as much of an effort to clean these up, as by and large they're rather close to where they should be.
-                        You'll surely find some
-                    other things if you explore the data closely enough. You can find the code I used to perform the data
+                        You'll surely find some other things if you explore the data closely enough. You can find the code I used to perform the data
                     processing <a href="https://github.com/tomplex">on Github</a>. </p>
-
 
                 </div>
 
@@ -76,7 +79,7 @@ permalink: nhl-birth-cities
                     <hr>
                     <div id="player-list">
 
-                      <input class="search searchy" placeholder="Search for player a team..." />
+                      <input class="search searchy" placeholder="Search for a player..." />
 
                       <ul class="list"></ul>
 
@@ -89,9 +92,9 @@ permalink: nhl-birth-cities
                     <hr>
                     <div id="team-list">
 
-                      <input class="search searchy" placeholder="Search for or team..." />
+                      <input class="search searchy" placeholder="Search for a team..." />
                       <button class="sort" onclick="hideAllTeams(); showAllCities()">
-                          <span>Show all</span>
+                          <span>Clear Team Filter</span>
                       </button>
                       <ul class="list"></ul>
 
@@ -100,6 +103,17 @@ permalink: nhl-birth-cities
 
                 <div class="sidebar-pane" id="cities">
                     <h1 class="sidebar-header">Cities<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
+                    <p>Click on a city name to zoom to that city and see all players from the selected city. Or, use the search to filter by city name or country ISO-3 code.</p>
+                    <hr>
+                    <div id="city-list">
+                      <input class="search searchy" placeholder="Search for a city..." />
+                      <button class="sort" onclick="hideAllCities(); showAllCities()">
+                          <span>Clear City Filter</span>
+                      </button>
+
+                      <ul class="list"></ul>
+
+                    </div>
                 </div>
 
                 <div class="sidebar-pane" id="info">
@@ -112,7 +126,7 @@ permalink: nhl-birth-cities
                     Many thanks to the creators of those libraries, doing a bunch of work that I didn't have to.</p>
 
                     <p>I had never heard of or used the <a href="http://www.geonames.org/">Geonames API</a> before this project,
-                        and without their free city geocoding API, this project would have been DOA. I highly recommend using
+                        and without their free city geocoding API, this project would have been over before it started. I highly recommend using
                         & contributing to their service.</p>
 
                     <p>Finally, thanks to <a href="http://hockey-reference.com">Hockey-Reference</a> for maintaining one
